# rust-react-jwt-boilerplate

./: .gitignore
backend/: Cargo.toml  configuration.yaml  docker-compose.yml
backend/migrations/: 20241231164309_create_users_table.sql
backend/src/: main.rs  server.rs
backend/src/config/: app_settings.rs
backend/src/domain/: user.rs
backend/src/middleware/: auth.rs
backend/src/route/: actuator.rs  auth.rs
backend/src/service/: authentication.rs  registration.rs
frontend/: README.md  bun.lockb  package.json
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/lib/: api.ts  auth.tsx
frontend/src/routes/: __root.tsx  _auth.profile.tsx  _auth.tsx  login.tsx  register.tsx
