[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [
	"runtime-tokio-native-tls",
	"postgres",
	"macros",
	"chrono",
	"uuid",
] }
tower-http = { version = "0.4", features = ["cors"] }
tokio-tungstenite = "0.20"
dotenv = "0.15.0"
argon2 = "0.5.3"
rand_core = "0.6.4"
chrono = { version = "0.4.39", features = ["serde"] }
jsonwebtoken = "9.3.0"
axum-extra = { version = "0.7.2", features = ["cookie"] }
time = "0.3.37"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
tower = "0.5.2"
actix-web = "4.9.0"
actix-cors = "0.7.0"
config = "0.14.0"
secrecy = { version = "0.8.0", features = ["serde"] }
actix-web-actors = "4.3.1"
actix = "0.13.5"
actix-broker = "0.4.3"
rand = "0.8.5"
log = "0.4.22"
